--- a/contactus.html
+++ b/contactus.html
@@ -59,11 +59,14 @@
       <div class="row row--gutters">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin headline--centered">Contact us</h2>
-            <p class="generic-content-container--para-center"><strong>Manali Beauty Care</strong> is headquartered at -  <br> I-2, Hatkesh Udyog Nagar, <br> Kashimira Bhayandar Road, P.O. Mira, <br> Mumbai - 401104, Maharashtra, India</p>
+            <p class="generic-content-container--para-center"><strong>Manali Beauty Care</strong> is headquartered at -  <br> I-2, Hatkesh Udyog Nagar, <br> Kashimira Bhayandar Road, P.O. Mira, <br> Dist. Thane, Mumbai - 401104, Maharashtra, India</p>
             <p class="generic-content-container--para-center"><strong>Phone No.:</strong> +91 022 28126222</p>
             <p class="generic-content-container--para-center"><strong>Email ID:</strong> <a class="generic-content-container--path-link" href="mailto:ajay@manalibeautycare.com">ajay@manalibeautycare.com</a></p>
             <p class="generic-content-container--para-center">You can find us here:</p>
             <div id="map"></div>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd51ne949C6C6gaiz5wV5KMbfXwjePZIMYDWOCxv1S6SB8hRQ/viewform?c=0&w=1">
+              <p>Please visit this <a href="https://docs.google.com/forms/d/e/1FAIpQLSd51ne949C6C6gaiz5wV5KMbfXwjePZIMYDWOCxv1S6SB8hRQ/viewform?c=0&w=1">link</a> to send your query</p>
+            </iframe>
           </div>
       </div>
     </div>
