--- a/history.html
+++ b/history.html
@@ -69,11 +69,11 @@
                 </span>
             </p>
             <h2 class="headline headline--no-t-margin">Our History&hellip;</h2>
-            <p>It began in year 1979, when our founder Mr. Virendra Kumar Jain and his wife Mrs. Asha Jain started Urmi Cosmetics Pvt Ltd. Before starting his own business, Mr. V K Jain had been working in manufacturing department for 12 years in Rambir Cosmetics Pvt Ltd, which was one of the top cosmetics company in those days, but when Rambir Cosmetics was about to shut Mr. V K Jain decided to start his own company.</p>
+            <p>It began in year 1979, when our founder Mr. Virendra Kumar Jain and his wife Mrs. Asha Jain started Urmi Cosmetics. Before starting his own business, Mr. V K Jain had been working in manufacturing department for 12 years in Rambir Cosmetics, which was one of the top cosmetics company in those days, but when Rambir Cosmetics was about to shut Mr. V K Jain decided to start his own company.</p>
             <p>With his vast experience Mr. V K Jain started with contract manufacturing and private labelling of cosmetic products.</p>
             <p>His initial product line included talcum powder, petroleum jelly, lipstick, shaving cream, mehndi tube, heena, nail polish, nail remover etc.</p>
             <p>The quality of work secured him contract from corporate like Lakme, Old Spice, J.K. Helene, Godrej, Park Avenue, Cussons India.</p>
-            <p>After serving in domestic market, he explored out of India and as time passed he gained market in foreign markets.</p>
+            <p>After serving in domestic market, he started exporting out of India and as time passed he gained market in foreign markets.</p>
             <p>In 1998, Mr V K Jain moved to a bigger location and to rejuvenate the work, he started with Manali Beauty Care Pvt Ltd. With new and improved facilities, Manali beauty care expanded in lengths of all verticals of business and came to where it is today and still expanding. In 2016, it was recognized by government as export house.</p>
             <p>Today its product line includes talcum powder, petroleum jelly, lotion (body lotion and baby lotion), oil (hair oil and baby oil), beauty cream, hair styling cream, hair gel etc.</p>
             <p>Manali beauty care has been keen to adapt itself with the changing environment and so is always ready to add new product to its product line, new technology for production. </p>
