--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="large-hero__text-content">
       <div class="wrapper">
         <h1 class="large-hero__title white-color">Manali Beauty Care</h1>
-        <p class="large-hero__description">Manufacturer &amp; Exporter</p>
+        <p class="large-hero__description">Manufacturer &amp; Exporter<br><br>An ISO 9001:2015 &amp; ISO 22716:2007 (Cosmetics GMP) certified company</p>
         <p><a href="#" class="btn btn--orange btn--large open-modal">Get In Touch</a></p>
       </div>
     </div>
