--- a/infrastructure.html
+++ b/infrastructure.html
@@ -125,7 +125,7 @@
       <div class="row row--gutters">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin">Testing</h2>
-            <p>Cosmetics are required to be safe when consumers use them according to directions in the labeling, or in the customary or expected way. In order to evaluate how our products meet and exceed quality, safety, sustainability and performance standards all of our products are test in government approved laboratories. Another advantage of getting products tested in government approved laboratories rather than own laboratory is to get true, fair and unbiased report.</p>
+            <p>Cosmetics are required to be safe when consumers use them according to directions in the labeling, or in the customary or expected way. In order to evaluate how our products meet and exceed quality, safety, sustainability and performance standards all of our products are tested in our own in house, mandatorily equipped and fully functional laboratory. We also get our products tested in government approved laboratories.</p>
           </div>
       </div>
 
