--- a/mission.html
+++ b/mission.html
@@ -46,7 +46,7 @@
     <div class="large-hero__text-content">
       <div class="wrapper">
         <h1 class="large-hero__title white-color">Mission &amp;  Vision!</h1>
-        <p class="large-hero__description">We believe in our dreams.</p>
+        <!-- <p class="large-hero__description">We believe in our dreams.</p> -->
       </div>
     </div>
   </div>
@@ -83,7 +83,6 @@
               <li>To manufacture best in class product in world class environment.</li>
               <li>To take over leading market position in segment of cosmetic product manufacturing in India.</li>
               <li>To break into new markets, beyond our existing market.</li>
-              <li>Extend our product line to include as many products as possible in our area of manufacturing.</li>
             </ul>
           </div>
       </div>
