revert last commit

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row row--gutters">
           <div class="generic-content-container">
             <h2 class="headline headline--no-t-margin">About us&hellip;</h2>
-            <p><strong>Manali Beauty Care Pvt Ltd</strong> is one of the finest manufacturer of <strong>cosmetic items, baby care and toiletry items</strong> in India, having experience of serving our customer worldwide <strong>since 1979</strong>. We are government recognized <strong>export house</strong>.</p>
+            <p><strong>Manali Beauty Care Pvt Ltd</strong> is one of the finest manufacturer of <strong>cosmetic, baby care and toiletry items</strong> in India, having experience of serving our customer worldwide <strong>since 1979</strong>. We are government recognized <strong>export house</strong>.</p>
             <p>Our main focus is on providing best in class quality products and services. The range of product we can develop and manufacture includes talcum powder, shampoo, oil, lotion, cream, hair styling cream etc. and we are always willing to add new product to its basket. To know our product line in details, Click here.</p>
             <p>We have our own <strong>manufacturing unit</strong>, matching the global standards. It is strategically located in suburban area of India&#39;s commerce capital i.e. <strong>Mumbai</strong> and so it is very well connected to India and world.</p>
             <p>We are currently exporting our products to foreign markets of <strong>America, Africa, Middle East and Asia</strong>. We have achieved specialization in are of providing services of private labelling, contract manufacturing and job work.</p>
